# shadow-coo-e2e

./: .env.example  .gitignore  Makefile  README.md  conftest.py  dashboard.html  pyproject.toml  test3_dashboard.html
.claude/: launch.json
scripts/: setup.sh  teardown.sh
tests/: test_0_health.py  test_1_data_pipeline.py  test_2_rbac_chain.py  test_3_coo_brief.py
